# bc_crunch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bc_crunch.c  bc_crunch.h  doc.md
.github/workflows/: c.yml
test/: benchmark.c  miniz.h  stb_image.h  test.c
